backend: Add send message route
